<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/headerGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="701dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="380dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textColor="@color/primary_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:background="@color/primary_color"
        app:layout_constraintTop_toBottomOf="@id/textLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/homeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/study_tips_text"
        android:textColor="#091E42"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider" />

    <TextView
        android:id="@+id/studyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:text="@string/today_tips_text"
        android:textAlignment="center"
        android:textColor="@color/primary_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeText" />

    <LinearLayout
        android:id="@+id/tips1Container"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/rounded_container"
        app:layout_constraintTop_toBottomOf="@id/studyText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tip1Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips1"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
        />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tips2Container"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/rounded_container"
        app:layout_constraintTop_toBottomOf="@id/tips1Container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tip2Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips2"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tips3Container"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/rounded_container"
        app:layout_constraintTop_toBottomOf="@id/tips2Container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tip3Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips3"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tips4Container"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/rounded_container"
        app:layout_constraintTop_toBottomOf="@id/tips3Container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tip4Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips4"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tips5Container"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/rounded_container"
        app:layout_constraintTop_toBottomOf="@id/tips4Container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tip5Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips5"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>