<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/headerGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="701dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="380dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textColor="@color/primary_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:background="@color/primary_color"
        app:layout_constraintTop_toBottomOf="@id/textLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/homeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/home_text"
        android:textColor="#091E42"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider" />

    <TextView
        android:layout_marginVertical="25dp"
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="24sp"
        android:textColor="@color/primary_color"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/homeText"
        />

    <LinearLayout
        android:id="@+id/homeContainer"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/rounded_container"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tipOfTheDayText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips_text"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="center"
        />

        <TextView
            android:id="@+id/tipText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_tips_text"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/yourForumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_forum_text"
        android:textSize="24sp"
        android:textColor="@color/primary_color"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/homeContainer"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/yourForumContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourForumText">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:background="@drawable/rounded_logo"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/universityImage"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/forumDetailText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/universityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BINUS University"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/forumDivider"
                    android:layout_width="260dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/universityName" />

                <TextView
                    android:id="@+id/courseName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Computer Science"
                    android:layout_marginVertical="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/joinStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="JOINED"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>







</androidx.constraintlayout.widget.ConstraintLayout>